/*
 * Copyright 2017 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package renderdemo;

option go_package = "renderdemo";

service GifCreator {
  rpc StartJob (StartJobRequest) returns (StartJobResponse);
  rpc GetJob (GetJobRequest) returns (GetJobResponse);
}

message StartJobRequest {
  // TODO(light): what scene parameters do we want to give?
  string name = 1;
  Product product_to_plug = 2;
}

enum Product {
  UNKNOWN_PRODUCT = 0;
  GRPC = 1;
  KUBERNETES = 2;
  GO = 3;
}

message StartJobResponse {
  string job_id = 1;
}

message GetJobRequest {
  string job_id = 1;
}

message GetJobResponse {
  enum Status {
    UNKNOWN_STATUS = 0;
    PENDING = 1;
    DONE = 2;
    FAILED = 3;
  };

  Status status = 1;

  // World-readable URL for created image.
  string image_url = 2;
}
